--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,7 +11,12 @@ form {
   background-color: azure;
 }
 #submit {
-  padding: 15px;
-  border-radius: 15px;
+  padding: 5px;
+  border-radius: 5px;
 }
-
+#title, #runtime, #rating, h3 {
+  display: block;
+}
+h3{
+  padding-top: 20px;
+}
