--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,13 @@
 doctype html
 html
   head
-    title= title
+    title Movies
     link(rel='stylesheet', href='/stylesheets/style.css')
+
+
   body
+    h1 Family-friendly Movies
     block content
+    script(src="https://code.jquery.com/jquery-1.11.3.min.js", type="text/javascript")
+    script(src="./javascripts/app.js", type="text/javascript")
+   // script(src="./routes/users.js", type="text/javascript")
