--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,5 +9,5 @@ html
     h1 Family-friendly Movies
     block content
     script(src="https://code.jquery.com/jquery-1.11.3.min.js", type="text/javascript")
-    script(src="./javascripts/app.js", type="text/javascript")
+    //script(src="./javascripts/app.js", type="text/javascript")
    // script(src="./routes/users.js", type="text/javascript")
